--- a/dj_lessons/static_assets/templates/static_assets/home.html
+++ b/dj_lessons/static_assets/templates/static_assets/home.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Django - Home</title>
     <link rel="stylesheet" href="{% static 'styles/style.css'%}">
-    <script src="{% static 'js/main.js'%}"></script>
+    <script src="{% static 'js/main.js'%}" defer></script>
 </head>
 <body>
     <nav>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'index' %}">Index</a>
+        <a href="{% url 'forms' %}">Forms</a>
     </nav>
     <h1>Learn Django</h1>
     <h3>From Home Page</h3>
